<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:layout_gravity="center"
    android:background="@drawable/background"
    tools:context=".AddCVActivity">

    <LinearLayout
        style="@style/linearParent"
        android:layout_width="393dp"
        android:layout_height="722dp"

        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <TextView
                style="@style/headerTextPrimary"
                android:text="@string/enregistrement_de_cv" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="550dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputPrenom"
                    style="@style/parent">

                    <EditText
                        android:id="@+id/editTextPrenom"
                        style="@style/modifiedEditText"
                        android:hint="@string/prenom"
                        android:layout_marginTop="90dp"
                        android:inputType="textPersonName"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputNom"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <EditText
                        android:id="@+id/editTextNom"
                        style="@style/modifiedEditText"
                        android:hint="@string/nom"
                        android:inputType="textPersonName"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputAge"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <EditText
                        android:id="@+id/editTextAge"
                        style="@style/modifiedEditText"
                        android:hint="@string/age"
                        android:inputType="number"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputEmail"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <EditText
                        android:id="@+id/editTextEmail"
                        style="@style/modifiedEditText"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputTelephone"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <EditText
                        android:id="@+id/editTextTelephone"
                        style="@style/modifiedEditText"
                        android:hint="@string/t_l_phone"
                        android:inputType="text|phone"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputAdresse"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <EditText
                        android:id="@+id/editTextAdresse"
                        style="@style/modifiedEditText"
                        android:hint="@string/adresse"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputSpecialite"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <EditText
                        android:id="@+id/editTextSpecialite"
                        style="@style/modifiedEditText"
                        android:hint="@string/sp_cialit"
                        android:inputType="text"
                        android:maxLines="2" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputNiveau"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <EditText
                        android:id="@+id/editTextNiveau"
                        style="@style/modifiedEditText"
                        android:hint="@string/niveau_d_tude"
                        android:inputType="text"
                        android:maxLines="2" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputExperience"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:layout_marginBottom="70dp">

                    <EditText
                        android:id="@+id/editTextExperience"
                        style="@style/modifiedEditText"
                        android:hint="@string/exp_rience_professionnelle"
                        android:inputType="textMultiLine" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:layout_marginRight="5dp"
                android:text="@string/enregistrer" />

            <Button
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="@string/retour" />

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>